scala 3x - added data